# TELL

./: .gitignore  CITATION.cff  README.md  pyproject.toml  web_ui_run.sh
conf/: config.yaml
detectors/: README.md  pyproject.toml
detectors/configs/: detectors.yaml  vendor_locks.tsv
detectors/docs/: DETECTORS_SETUP.md  RUN_FULL_SUITE_2GPU.md
detectors/results/multi_domain_hf5k_benchmark/: PROVENANCE.json  README.md  merge_summary.json  run_manifest.json  summary.tsv
detectors/results/multi_domain_hf5k_benchmark/merged_predictions/: aigc_mpu_env3.predictions.jsonl  argugpt.predictions.jsonl  binoculars.predictions.jsonl  chatgpt_d.predictions.jsonl  detectllm_lrr.predictions.jsonl  detectllm_npr.predictions.jsonl  dnagpt.predictions.jsonl  fast_detectgpt.predictions.jsonl  logrank_gpt2_medium.predictions.jsonl  mage_d.predictions.jsonl  openai_roberta.predictions.jsonl  pangram_editlens_llama.predictions.jsonl  phd_roberta.predictions.jsonl  radar.predictions.jsonl  t5_sentinel.predictions.jsonl
detectors/results/multi_domain_hf5k_benchmark/metrics/: argugpt.metrics.json  argugpt.metrics.roc_points.tsv  chatgpt_d.metrics.json  chatgpt_d.metrics.roc_points.tsv  detectllm_lrr.metrics.json  detectllm_lrr.metrics.roc_points.tsv  detectllm_npr.metrics.json  detectllm_npr.metrics.roc_points.tsv  dnagpt.metrics.json  dnagpt.metrics.roc_points.tsv  fast_detectgpt.metrics.json  fast_detectgpt.metrics.roc_points.tsv  mage_d.metrics.json  mage_d.metrics.roc_points.tsv  openai_roberta.metrics.json  openai_roberta.metrics.roc_points.tsv  pangram_editlens_llama.metrics.json  pangram_editlens_llama.metrics.roc_points.tsv  radar.metrics.json  radar.metrics.roc_points.tsv
detectors/results/multi_domain_hf5k_benchmark_v2/: README.md  package_manifest.json
detectors/results/multi_domain_hf5k_benchmark_v2/predictions/test/: aigc_mpu_env3.predictions.jsonl  binoculars.predictions.jsonl  logrank_gpt2_medium.predictions.jsonl  phd_roberta.predictions.jsonl  t5_sentinel.predictions.jsonl
detectors/results/multi_domain_hf5k_benchmark_v2/predictions/validation/: aigc_mpu_env3.predictions.jsonl  binoculars.predictions.jsonl  logrank_gpt2_medium.predictions.jsonl  phd_roberta.predictions.jsonl  t5_sentinel.predictions.jsonl
detectors/results/multi_domain_hf5k_benchmark_v2/summaries/: paper_five_requested_detectors_results.json  paper_five_requested_detectors_results.tsv
detectors/scripts/: collect_detector_paper_results.py  export_hf_dataset_jsonl.py  finalize_detector_paper_results.py  launch_wave1_fast.sh  merge_wave1_fast.py  run_detector_tmux.sh  run_full_suite_2gpu.sh  run_wave4_more_text_detectors.sh  setup_server.sh  smoke_all.sh  wait_merge_detector_suite.sh  wait_merge_wave1_fast.sh
detectors/src/detectors_bench/: __init__.py  calibration.py  fit_mfd.py  io.py  metrics.py  registry.py  run_benchmark.py  run_detector.py  schemas.py  summarize_results.py
detectors/src/detectors_bench/wrappers/: __init__.py  base.py  binoculars.py  dnagpt.py  factory.py  fast_detectgpt.py  ghostbuster.py  gpt_oss_direct.py  hf_classifier.py  lm_features.py  mage.py  meld.py  mfd.py  pangram_editlens.py  perturbation.py  phd.py  t5_sentinel.py
detectors/tests/: test_metrics.py  test_registry.py  test_schemas.py
experiments/: analyze_tell_why.py  audit_why_idf_dropout.py  plot_detectors_and_reported_scores.py  rewrite_why_explanations.py  tinker_why_logprob_trace.py
scripts/: bootstrap_eval.py  build_unified_dataset.py  create_paper_splits.py  join_mage_scores.py  (+7 more)
(+52 files in other folders)
