[project]
name = "rl-detector"
version = "0.1.0"
description = "Interpretable TELL AI detector web UI and training toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "hydra-core>=1.3.0",
]

[tool.poetry]
name = "rl-detector"
version = "0.1.0"
description = "Interpretable TELL AI detector web UI and training toolkit"
authors = ["Aldan Creo <research@acmc.fyi>", "Suraj Ranganath <suranganath@ucsd.edu>"]
packages = [{ include = "rl_detector", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
python-dotenv = ">=1.0"
PyYAML = ">=6.0"
hydra-core = ">=1.3.0"

[tool.poetry.group.web.dependencies]
fastapi = ">=0.110.0"
uvicorn = { version = "0.46.0", extras = ["standard"] }
aiofiles = ">=23.2.0"
pydantic = ">=2.7.0"
google-cloud-firestore = ">=2.19.0"
transformers = ">=4.0"
tinker = ">=0.20.0"
orjson = ">=3.11.8"
openai = ">=1.0"
jinja2 = ">=3.0"
weave = ">=0.52.36"
opentelemetry-exporter-otlp-proto-http = ">=1.20.0"

[tool.poetry.group.training.dependencies]
tinker = ">=0.20.0"
openai = ">=1.0"
orjson = ">=3.11.8"
transformers = ">=4.0"
tqdm = "*"
torch = "*"
datasets = "*"
google-genai = "*"
wandb = "*"
weave = ">=0.52.36"
opentelemetry-exporter-otlp-proto-http = ">=1.20.0"
scikit-learn = "*"
tinker-cookbook = ">=0.4.1"
spacy = ">=3.8.2,<4"
spacy-lookups-data = ">=1.0.5"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
training = [
    "tinker>=0.20.0",
    "openai>=1.0",
    "orjson>=3.11.8",
    "transformers>=4.0",
    "tqdm",
    "torch",
    "datasets",
    "google-genai",
    "wandb",
    "weave>=0.52.36",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "scikit-learn",
    "tinker-cookbook>=0.4.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "hydra-core>=1.3.0",
    "spacy>=3.8.2,<4",
    "spacy-lookups-data>=1.0.5",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.46.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.7.0",
    "google-cloud-firestore>=2.19.0",
    "transformers>=4.0",
    "tinker>=0.20.0",
    "orjson>=3.11.8",
    "openai>=1.0",
    "jinja2>=3.0",
    "weave>=0.52.36",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[tool.uv]
default-groups = ["dev", "training", "web"]
